[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orcaflex_yml_generator"
authors = ["Timothy Cameron <timiancam@gmail.com>"]
version = "1.0"
description = "Generates OrcaFlex simulation model text files with diverse input parameters."
readme = "README.md"
keywords = ["OrcaFlex"]
license = "MIT"
repository = "https://github.com/timiancam/orcaflex_yml_generator"
packages = [{include = "orcaflex_yml_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
